# RayTracerSimplified

./: CMakeLists.txt  LICENSE  README.md
rendered_images/: image.ppm  image_final_scene_1_rays_1_scatters.ppm  image_final_scene_5_rays_1_scatters.ppm  image_final_scene_show_D.ppm  image_final_scene_test_A.ppm  image_test_A.ppm  image_test_B.ppm  image_test_C.ppm  image_test_D.ppm  image_test_E.ppm  image_test_F.ppm  image_test_G.ppm  image_v0.1.0_hello_world.ppm  image_v0.2.0_vector_model_added.ppm  image_v0.3.0_rays_and_camera_added.ppm  image_v0.4.0_multiobjects_can_be_rendered.ppm  image_v0.4.2_diffuse_added.ppm  image_v0.4.3_material_added.ppm  image_v0.4.4_garmma_corrected.ppm  image_v0.5.0_probability_of_refraction_added.ppm  image_v0.5.1_custom_wide-angle_lens_added.ppm  image_v0.5.2_camera_position_changed_B.ppm  image_v0.5.2_custom_camera_position_added.ppm
src/: image.ppm  main.cpp
src/core/: camera.cpp  camera.h  material.cpp  material.h  ray.cpp  ray.h  renderable.cpp  renderable.h  renderable_list.cpp  renderable_list.h  vector3.cpp  vector3.h
src/geometry/: sphere.cpp  sphere.h
src/material/: material.cpp  material.h
src/material/implementation/: dielectric.cpp  dielectric.h  lambertian.cpp  lambertian.h  metal.cpp  metal.h
src/purpose/: scene.cpp  scene.h
src/renderable/: renderable.h
src/renderable/implementation/: renderable_list.cpp  renderable_list.h  sphere.cpp  sphere.h
src/util/: utils.cpp  utils.h
